<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nturt_rpi_can_latency_test</name>
    <version>0.0.0</version>
    <description>ROS2 package for testing can latency.</description>
    <maintainer email="jet22854111@gmail.com">QuantumSpawner</maintainer>
    <author email="jet22854111@gmail.com">QuantumSpawner</author>
    <license>TODO</license>

    <!-- general dependencies -->
    <depend>ament_index_cpp</depend>
    <depend>can_msgs</depend>
    <depend>nturt_realtime_utils</depend>
    <depend>rclcpp</depend>
    <depend>rclpy</depend>

    <!-- build dependencies -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!-- execute dependencise -->
    <exec_depend>ament_index_py</exec_depend>
    <exec_depend>nturt_can_parser</exec_depend>
    <exec_depend>ros2launch</exec_depend>
    <exec_depend>ros2_socketcan</exec_depend>

    <!-- test dependencies -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
